@@ -1,3 +1,13 @@
+2014-07-29  Daniel Bates  <dabates@apple.com>
+
+        Use WTF::move() instead of std::move() to help ensure move semantics
+        https://bugs.webkit.org/show_bug.cgi?id=135351
+
+        Reviewed by Alexey Proskuryakov.
+
+        * wtf/HashTable.h:
+        (WTF::KeyTraits>::HashTable):
+
 2014-07-28  Brian J. Burg  <burg@cs.washington.edu>
 
         Should not export symbols for base64Encode inline adapter methods
