@@ -1,3 +1,13 @@
+2014-07-29  Daniel Bates  <dabates@apple.com>
+
+        Use WTF::move() instead of std::move() to help ensure move semantics
+        https://bugs.webkit.org/show_bug.cgi?id=135351
+
+        Reviewed by Alexey Proskuryakov.
+
+        * page/CaptionUserPreferences.cpp:
+        (WebCore::CaptionUserPreferences::updateCaptionStyleSheetOveride):
+
 2014-07-29  Mihnea Ovidenie  <mihnea@adobe.com>
 
         [CSSRegions] Assertion failure hit testing a region-based multicolumn in a region
