@@ -1,3 +1,15 @@
+2014-07-29  Daniel Bates  <dabates@apple.com>
+
+        Use WTF::move() instead of std::move() to help ensure move semantics
+        https://bugs.webkit.org/show_bug.cgi?id=135351
+
+        Reviewed by Alexey Proskuryakov.
+
+        * bytecode/GetByIdStatus.cpp:
+        (JSC::GetByIdStatus::computeForStubInfo):
+        * bytecode/GetByIdVariant.cpp:
+        (JSC::GetByIdVariant::GetByIdVariant):
+
 2014-07-28  Tamas Gergely  <tgergely.u-szeged@partner.samsung.com>
 
         BuildFix: JavaScriptCore/bytecode/StructureSet.h:262:77: warning.
